fixed font size on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -95,13 +95,6 @@ header input {
   margin-top: 1.5rem;
 }
 
-.date {
-  font-size: 3rem;
-  color: #fff;
-
-  border-radius: 1rem 1rem 0 0;
-}
-
 .scroll-left,
 .scroll-right {
   position: absolute;
@@ -162,6 +155,12 @@ header input {
   position: relative;
 }
 
+.date {
+  font-size: 2.5rem;
+  color: #fff;
+  border-radius: 1rem 1rem 0 0;
+}
+
 .card img {
   position: absolute;
   bottom: -2.5rem;
@@ -183,7 +182,7 @@ footer {
   margin-top: 2rem;
   padding: 1.5rem;
   text-align: center;
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 footer > p:not(:first-of-type) {
